Fixed element alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,24 +27,29 @@ body {
     grid-gap: 20px;
 }
 
+.wrapper {
+    /* position: relative; */
+    display: flex;
+    max-width: 550px;
+    margin: 0 auto;
+
+}
+
+input {
+    width: 90%;
+    height: 40px;
+    margin: 0 auto;
+    border-radius: 5px;
+    border: 1px solid lightgray;
+    color: lightgray;
+    font-family: 'Open Sans';
+    padding: 8px;
+    outline: 0;
+}
+
+
 .card {
     width: 200px;
     height: 200px;
     margin: 0 auto;
-}
-
-.inputBox {
-    margin: 0 auto;
-    max-width: 500px;
-    margin-bottom: 10px;
-}
-
-input {
-    width: 500px;
-    height: 40px;
-    border-radius: 5px;
-    border-color: lightgray;
-    color: lightgray;
-    font-family: 'Open Sans';
-    padding-left: 8px;
 }
